Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-2459] fixed setting trigger value to unknown on disabling (Aly)
 - [ZBX-2414] added PHP session module check as requirement in dashboard and installation (Maxim Andruhovich / AM)
 - [ZBX-2526] fixed graph refresh problem when referred from screens page (Aly)
 - [ZBX-2525] improved actions api code (Vedmak)
 - [ZBX-2324] fixed guest user settings not being stored (Vedmak)
 - [DEV-461] improved map creation/editing by adding align option (Aly)
 - [ZBX-2518] fixed new map saving (Aly)
 - [ZBX-2469] fixed screen api (Vedmak)
 - [ZBXNEXT-396] added optional parameters 'from' and 'to' to zabbix[queue] (asaveljevs)
 - [ZBX-2511] fixed compilation on FreeBSD with IPv6 due to FD_SETSIZE being undefined (asaveljevs)
 - [ZBX-2503] fixed server and proxy crash with Oracle in cases DBUser and DBPassword parameters were not specified (asaveljevs)
 - [ZBX-2074] fixed wed scenarios showing incorrect speed (Vedmak)
 - [ZBX-2486] fixed syntax error in 1.6 PostgreSQL upgrade script (asaveljevs)
 - [ZBX-2336] fixed 'system.hostname' being empty on Windows hosts with names longer than 15 characters (asaveljevs)
 - [ZBX-2251] removed error displaying in area of graphics (Maxim Andruhovich / AM)
 - [ZBX-1327] page is now remembered correctly after performing actions (Vedmak)
 - [ZBX-1211] fixed cell spacing in empty cells (Maxim Andruhovich / AM)
 - [ZBX-2372] fixed bug with date in local language, now short and long month names shown correctly (Andruhovich Maxim / AM)
 - [ZBX-2385] added macro {TRIGGER.PROBLEM.EVENTS.PROBLEM.UNACK} (Vedmak)
 - [ZBX-2040] annoying "double check" popups removed from copy to & mass update actions of items and triggers (Maxim Andruhovich / AM)
 - [ZBX-2482] fixes in chart graphs avg calc (Aly)