@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2339] fixed height of row in resource "Plain text" in screens (Aly)
  - [ZBX-2459] fixed setting trigger value to unknown on disabling (Aly)
  - [ZBX-2414] added PHP session module check as requirement in dashboard and installation (Maxim Andruhovich / AM)
  - [ZBX-2526] fixed graph refresh problem when referred from screens page (Aly)
